<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="38dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="316dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="316dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/defval"
        android:inputType="number|numberSigned|numberDecimal"
        android:textAppearance="@android:style/TextAppearance.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="65dp"
        android:layout_height="38dp"
        android:layout_marginEnd="224dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="224dp"
        android:layout_marginStart="120dp"
        android:text="@string/button_send"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:text="@string/t2"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="47dp"
        android:layout_height="54dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="172dp"
        android:text="@string/t3"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="49dp"
        android:layout_height="53dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="292dp"
        android:text="@string/t4"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="53dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="412dp"
        android:text="@string/t5"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="38dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="316dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="316dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/defval"
        android:inputType="number|numberSigned|numberDecimal"
        android:textAppearance="@android:style/TextAppearance.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="38dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="316dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="316dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="270dp"
        android:ems="10"
        android:hint="@string/defval"
        android:inputType="number|numberSigned|numberDecimal"
        android:textAppearance="@android:style/TextAppearance.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="38dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="316dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="316dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="390dp"
        android:ems="10"
        android:hint="@string/defval"
        android:inputType="number|numberSigned|numberDecimal"
        android:textAppearance="@android:style/TextAppearance.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <Button
        android:id="@+id/button2"
        android:layout_width="65dp"
        android:layout_height="38dp"
        android:layout_marginEnd="224dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="224dp"
        android:layout_marginStart="120dp"
        android:text="@string/button2"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="64dp"
        android:layout_height="40dp"
        android:layout_marginEnd="224dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="224dp"
        android:layout_marginStart="120dp"
        android:text="@string/button3"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="64dp"
        android:layout_height="40dp"
        android:layout_marginEnd="224dp"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="224dp"
        android:layout_marginStart="120dp"
        android:text="@string/button4"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="92dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="70dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:text="@string/defoutput"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="91dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="70dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="180dp"
        android:text="@string/defoutput"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="93dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="70dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="300dp"
        android:text="@string/defoutput"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="92dp"
        android:layout_height="41dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="70dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="420dp"
        android:text="@string/defoutput"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>